--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "dev": "nodemon src/server.ts",
+    "dev": "tsc --watch",
     "start": "node dist/server.js",
     "lint": "eslint --ignore-path .eslintignore --ext .js,.ts"
   },
