--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "npm run test:unit && npm run test:integration",
     "coverage": "nyc --reporter=text npm test",
     "build": "tsc",
-    "dev": "nodemon --watch src/server.ts --files",
+    "dev": "nodemon --watch src --files",
     "start": "node dist/server.js",
     "lint": "eslint --ignore-path .eslintignore --ext .js,.ts"
   },
@@ -32,7 +32,9 @@
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "express": "^4.18.2",
+    "express-jwt": "^8.4.1",
     "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.0.3"
   },
@@ -43,6 +45,7 @@
     "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/lodash": "^4.14.202",
     "@types/mocha": "^10.0.6",
     "@types/node": "^20.10.4",
