--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "coverage": "nyc --reporter=text npm test",
     "build": "tsc",
     "dev": "nodemon --watch src --files",
-    "start": "node dist/server.js",
+    "start": "node -r dotenv/config dist/server.js",
+    "start:production": "node dist/server.js",
     "lint": "eslint --ignore-path .eslintignore --ext .js,.ts"
   },
   "nyc": {
