--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.9.1",
     "@mui/icons-material": "^5.15.2",
     "@mui/material": "^5.15.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.1"
+    "react-hook-form": "^7.53.1",
+    "react-router-dom": "^6.21.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.6",
