--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.15.2",
     "@mui/material": "^6.1.6",
     "@tanstack/react-query": "^5.59.20",
+    "framer-motion": "^11.14.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.2",
